src/quick/items/qquicktext_p_p.h
@@ -77,7 +77,6 @@ public:
         QString hoveredLink;
         int minimumPixelSize;
         int minimumPointSize;
-        int nbActiveDownloads;
         int maximumLineCount;
         int renderTypeQuality;
         bool lineHeightValid : 1;
@@ -163,6 +162,8 @@ public:
 
     void ensureDoc();
     void updateDocumentText();
+
+    qreal devicePixelRatio() const;
 
     QRectF setupTextLayout(qreal * const baseline);
     void setupCustomLineGeometry(QTextLine &line, qreal &height, int fullLayoutTextLength, int lineOffset = 0);
